--- a/grand-ui/package.json
+++ b/grand-ui/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "history": "^4.10.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
